tests/requests/valid/042.http
OPTIONS * HTTP/1.1\r\n
Content-Length: 0\r\n
\r\n
