tests/requests/invalid/nonascii_01.http
GETß /germans.. HTTP/1.1\r\n
Content-Length: 3\r\n
\r\n
ÄÄÄ
